--- a/src/app/components/basic-components/narrow-basic-table-row/narrow-basic-table-row.component.scss
+++ b/src/app/components/basic-components/narrow-basic-table-row/narrow-basic-table-row.component.scss
@@ -6,11 +6,32 @@
 
 .narrow-basic-table-row {
     border-bottom: 1px solid $lavender_blue;
-
-    display: inline-flex;
+    display: flex;
     padding: 0.25rem 0rem;
     align-items: center;
     gap: 0.0625rem;
+
+}
+
+.special-cell {
+    flex-grow: 0;
+    flex-basis: auto;
+    margin-left: auto;
+}
+
+.regular-cell {
+    flex-grow: 1;
+    flex-basis: 0;
+}
+
+.cell {
+
+    display: flex;
+    height: 3.125rem;
+    padding: var(--layout-02, 0.5rem);
+    align-items: center;
+    gap: 0.625rem;
+    flex: 1 0 0;
 
 
 }
